<resources>

    <string-array name="states">
        <item>Estado</item>
        <item>Minas Gerais</item>
    </string-array>

    <string-array name="cities">
        <item>Cidade</item>
        <item>Belo Horizonte</item>
        <item>Betim</item>
        <item>Contagem</item>
        <item>Formiga</item>
        <item>Ibirité</item>
        <item>Montes Claros</item>
        <item>Nova Lima</item>
    </string-array>

    <string name="app_name">BrasilCard fácil</string>
    <string name="title_activity_main"><b>BrasilCard</b> fácil</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Configurações</string>
    <string name="action_account">Conta</string>

    <string name="facebook_app_id">560542227472715</string>

    <string name="message_logout">Tem certeza que deseja sair?</string>
    <string name="yes_logout">Sim</string>
    <string name="no_logout">Não</string>
    <string name="plano_total"><b>BrasilCard</b> fácil Total</string>
    <string name="plano_cheers"><b>BrasilCard</b> fácil Saúde</string>
    <string name="plano_funeral"><b>BrasilCard</b> fácil Funerário</string>
    <string name="plano_bronze"><b>BrasilCard</b> fácil Bronze</string>
    <string name="group_menu_planos"><b>Planos</b></string>
    <string name="group_menu_opcoes"><b>Opções</b></string>
    <string name="conta">Conta</string>
    <string name="configuracoes">Configurações</string>
    <string name="sair">Sair</string>
    <string name="screen_settings">Configurações</string>
    <string name="screen_account">Conta</string>
    <string name="settings_localizacao">Localização</string>
    <string name="settings_notificao">Notificação</string>
    <string name="settings_banner_ads">Banner Ads</string>
    <string name="settings_som">Som</string>
    <string name="settings_on">on</string>
    <string name="settings_off">off</string>
    <string name="settings_log_out">Log Out</string>
    <string name="screen_comprar_plano">Comprar plano</string>
    <string name="screen_plans">Planos</string>
    <string name="screen_partners">Parceiros</string>
    <string name="procurar_por_nome">Procurar por nome</string>
    <string name="screen_clinic">Clínicas e Hospitais</string>
    <string name="screen_dentistry">Odontologia</string>
    <string name="screen_veterinary">Veterinária</string>
    <string name="screen_lab">Laboratórios</string>
    <string name="screen_trade">Comércio</string>
    <string name="screen_advocacy">Advocacia</string>
    <string name="screen_funeral">Funerária</string>
    <string name="error_loading_partners">Algo deu errado ao carregar os parceiros, por favor contate o administrador.</string>
    <string name="error_loading_offers">Algo deu errado ao carregar as ofertas, por favor contate o administrador.</string>
    <string name="error_signin">Algo deu errado ao fazer login, tente novamente.</string>
    <string name="error_create_new_account">Algo deu errado ao tentar criar a conta, tente novamente.</string>
    <string name="loading_partners_pls_wait">Carregando parceiros, por favor aguarde!!!</string>
    <string name="loading_offers_pls_wait">Carregando ofertas, por favor aguarde!!!</string>
    <string name="data_saved_sucess">Dados salvos com sucesso.</string>
    <string name="msg_logout">Saindo…</string>
    <string name="error_all_fields_required">Todos os campos são obrigatórios, tente novamente.</string>
    <string name="user_created_successfully">Usuário criado com sucesso.</string>
    <string name="error_unknown_error">Erro desconhecido, tente novamente e contate o administrador.</string>
    <string name="error_failed_signin_email_exists">Falha ao entrar\n\nEsse e-mail já está sendo usado em nosso sistema e dispositivo.\nTente novamente com outro método de login.</string>
    <string name="error_invalid_email">Email inválido, digite novamente.</string>
    <string name="error_password_too_small">Sua senha precisa ter pelo menos 6 caracteres, digite novamente.</string>
    <string name="error_google_play_services">Erro no Google Play Services.</string>
    <string name="error_facebook_login_canceled">Login com o Facebook cancelado.</string>
    <string name="error_facebook_login_unknown_error">Erro desconhecido com o login com o Facebook, tente novamente e contate o administrador.</string>
    <string name="error_failed_signin_google_account">Falha ao logar com a conta Google, tente novamente.</string>
    <string name="error_user_password_incorrect">Usuário e/ou senha incorreto(s).</string>
    <string name="screen_partners_map">Parceiros próximos</string>
    <string name="error_permission_localization_denied">"Sua localização não pôde ser carregada, a permissão foi negada, por favor reinicie essa tela e aceite para uma melhor experiência com essa funcionalidade."</string>
    <string name="menu_item_partners">Parceiros</string>
    <string name="menu_item_nearby">Próximos</string>
    <string name="group_menu_partners"><b>Parceiros</b></string>
    <string name="contentDescriptionBannerParceiros">Banner exibição de parceiros</string>
    <string name="banner_screen_settings">Banner screen settings</string>
    <string name="logout_screen_settings">logout screen settings</string>
    <string name="login_screen_signin">login screen signin</string>
    <string name="hint_password">Senha</string>
    <string name="hint_email">Email</string>
    <string name="entrar_screen_signin">entrar screen signin</string>
    <string name="user_img_screen_main">Foto usuario tela principal</string>
    <string name="banner_screen_partners">Banner screen partners</string>
    <string name="image_clinic_screen_partner">Image clinic screen partner</string>
    <string name="dentistry_image_screen_partner">Dentistry image screen partner</string>
    <string name="veterinary_image_screen_partner">Veterinary image screen partner</string>
    <string name="lab_image_screen_partner">Lab image screen partner</string>
    <string name="trade_image_screen_partner">Trade image screen partner</string>
    <string name="advocacy_image_screen_partner">Advocacy image screen partner</string>
    <string name="funeral_image_screen_partner">Funeral image screen partner</string>
    <string name="banner_screen_partner_details">Banner screen partner details</string>
    <string name="banner_text_screen_total_plan">Banner text screen total plan</string>
    <string name="buy_button_screen_total_plan">Buy button screen total plan</string>
    <string name="image_brasilcardfacil_screen_splash">Image BrasilCardfacil screen splash</string>
    <string name="partner_logo">partner logo</string>
    <string name="hint_name">Nome</string>
    <string name="banner_text_screen_cheers_plan">banner text screen cheers plan</string>
    <string name="buy_button_screen_cheers_plan">buy button screen cheers plan</string>
    <string name="banner_text_screen_funeral">banner text screen funeral</string>
    <string name="buy_button_screen_funeral">buy button screen funeral</string>
    <string name="create_account_screen_new_user">create account screen new user</string>
    <string name="create_screen_new_user">create screen new user</string>
    <string name="banner_screen_plans">banner screen plans</string>
    <string name="divisor_screen_sign_in">divisor screen sign in</string>
    <string name="banner_screen_menu">banner screen menu</string>
    <string name="user_pic_screen_account">user pic screen account</string>
    <string name="email_screen_account">email screen account</string>
    <string name="edit_screen_account">edit screen account</string>
    <string name="phone_screen_account">phone screen account</string>
    <string name="born_screen_account">born screen account</string>
    <string name="sex_screen_account">sex screen account</string>
    <string name="plan_description_screen_account">plan description screen account</string>
    <string name="save_screen_account">save screen account</string>
    <string name="action_fav">Favorito</string>
    <string name="screen_fav">Favoritos</string>
    <string name="banner_favoritos">Banner favoritos</string>
    <string name="screen_offers">Ofertas</string>
    <string name="banner_offers">Banner Ofertas</string>
    <string name="offer_logo">Banner Oferta</string>
    <string name="banner_screen_offer_details">Banner da oferta</string>
    <string name="screen_tips">Dicas</string>
    <string name="menu_item_fav">Favoritos</string>
    <string name="menu_item_offer">Ofertas</string>
    <string name="banner_active_health">Banner Saúde Ativa</string>
    <string name="active_health_logo">Banner Saúde ativa</string>
    <string name="banner_screen_tips_details">Banner da tela de detalhes Dicas</string>
    <string name="loading_tips_pls_wait">Carregando dicas, por favor aguarde!!!</string>
    <string name="error_loading_tips">Algo deu errado ao carregar as dicas, por favor contate o administrador.</string>
    <string name="loading_partner_pls_wait">Carregando parceiro, por favor aguarde!!!</string>
    <string name="error_loading_partner">Algo deu errado ao carregar o parceiro, por favor contate o administrador.</string>
    <string name="loading_offer_pls_wait">Carregando oferta, por favor aguarde!!!</string>
    <string name="error_loading_offer">Algo deu errado ao carregar a oferta, por favor contate o administrador.</string>
    <string name="message_partner_added_favorities">Parceiro removido dos favoritos</string>
    <string name="message_partner_removed_favorities">Parceiro adicionado aos favoritos</string>
    <string name="menu_item_plan">Planos</string>
    <string name="menu_item_tips">Dicas</string>
    <string name="screen_food">Alimentação</string>
    <string name="screen_art_design">Arte e Design</string>
    <string name="screen_auto">Auto</string>
    <string name="screen_beauty">Beleza</string>
    <string name="screen_consulting">Consultoria</string>
    <string name="screen_education">Educação</string>
    <string name="screen_sport">Esporte</string>
    <string name="screen_clothing">Vestuário</string>
    <string name="screen_entertainment">Entretenimento</string>
    <string name="screen_home">Lar e Construção</string>
    <string name="screen_tourism">Turismo</string>
    <string name="screen_health">Saúde</string>
    <string name="screen_tech">Tecnologia</string>
    <string name="screen_selection_local">Selecione o local</string>
    <string name="screen_world_animal">Mundo Animal</string>
    <string name="search_title">Buscar por tag</string>
    <string name="screen_services">Serviços</string>
</resources>
