<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_plan"
        android:icon="@drawable/sandwich_0006_planos_sandwich"
        android:title="@string/menu_item_plan"/>

    <item
        android:id="@+id/nav_partners"
        android:icon="@drawable/sandwich_0007_parceiros_sandwich"
        android:title="@string/menu_item_partners"/>

    <item
        android:id="@+id/nav_nearby"
        android:icon="@drawable/sandwich_0008_proximos_sandwich"
        android:title="@string/menu_item_nearby"/>

    <item
        android:id="@+id/nav_offer"
        android:icon="@drawable/sandwich_0009_ofertas_sandwich"
        android:title="@string/menu_item_offer"/>

    <item
        android:id="@+id/nav_fav"
        android:icon="@drawable/sandwich_0010_favoritos_sandwich"
        android:title="@string/menu_item_fav"/>

    <item
        android:id="@+id/nav_active_health"
        android:icon="@drawable/sandwich_0011_dicas_sandwich"
        android:title="@string/menu_item_tips"/>

    <item android:title="@string/group_menu_opcoes">
        <menu>
            <item
                android:id="@+id/nav_account"
                android:icon="@drawable/user_0016_user"
                android:title="@string/conta"/>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/user_0015_sair"
                android:title="@string/sair" />
        </menu>
    </item>

</menu>
