<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_partner"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.brasilcardfacil.www.brasilcardfacil.view.PartnerActivity">

    <ImageView
        android:id="@+id/main_banner"
        android:contentDescription="@string/banner_screen_partners"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/parceiros_0006_banner_parceiros"
        android:scaleX="1.02"
        android:scaleType="fitStart"
        android:adjustViewBounds="true"
        android:layout_marginTop="4sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/main_banner"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/partner_med_hosp"
            android:contentDescription="@string/image_clinic_screen_partner"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".1428"
            android:background="@drawable/parceiros_0009_clinicas_medicas_e_hospitais"
            android:scaleY="0.5"
            android:scaleX="0.7"/>

        <ImageButton
            android:id="@+id/partner_odonto"
            android:contentDescription="@string/dentistry_image_screen_partner"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".1428"
            android:background="@drawable/parceiros_0010_odontologia"
            android:scaleY="0.5"
            android:scaleX="0.4"/>

        <ImageButton
            android:id="@+id/partner_veteri"
            android:contentDescription="@string/veterinary_image_screen_partner"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".1428"
            android:background="@drawable/parceiros_0011_veterinaria"
            android:scaleY="0.5"
            android:scaleX="0.4"/>

        <ImageButton
            android:id="@+id/partner_lab"
            android:contentDescription="@string/lab_image_screen_partner"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".1428"
            android:background="@drawable/parceiros_0012_laboratorios"
            android:scaleY="0.5"
            android:scaleX="0.4"/>

        <ImageButton
            android:id="@+id/partner_comercio"
            android:contentDescription="@string/trade_image_screen_partner"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".1428"
            android:background="@drawable/parceiros_0013_comercio"
            android:scaleY="0.5"
            android:scaleX="0.4"/>

        <ImageButton
            android:id="@+id/partner_advocacia"
            android:contentDescription="@string/advocacy_image_screen_partner"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".1428"
            android:background="@drawable/parceiros_0014_advocacia"
            android:scaleY="0.5"
            android:scaleX="0.4"/>

        <ImageButton
            android:id="@+id/partner_funeraria"
            android:contentDescription="@string/funeral_image_screen_partner"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".1428"
            android:background="@drawable/parceiros_0015_funeraria"
            android:scaleY="0.5"
            android:scaleX="0.4"/>
    </LinearLayout>

</RelativeLayout>
