<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.brasilcardfacil.www.brasilcardfacil.view.PartnerBeautyActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/main_banner"
            android:contentDescription="@string/banner_screen_partners"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/parceiros_beleza_0006_banner_parceiros"
            android:scaleX="1.02"
            android:scaleType="fitStart"
            android:adjustViewBounds="true"
            android:layout_marginTop="8sp"/>

        <ImageButton
            android:id="@+id/beauty_barber_shop"
            android:contentDescription="@string/image_clinic_screen_partner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/main_banner"
            android:background="@drawable/parceiros_beleza_0009_barbearia"
            android:layout_margin="8sp"
            android:scaleX="0.35"/>

        <ImageButton
            android:id="@+id/beauty_aesthetics"
            android:contentDescription="@string/dentistry_image_screen_partner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/beauty_barber_shop"
            android:background="@drawable/parceiros_beleza_0010_estetica"
            android:layout_margin="8sp"
            android:scaleX="0.25"/>

        <ImageButton
            android:id="@+id/beauty_make_up"
            android:contentDescription="@string/veterinary_image_screen_partner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/beauty_aesthetics"
            android:background="@drawable/parceiros_beleza_0011_maquiagem"
            android:layout_margin="8sp"
            android:scaleX="0.4"/>

        <ImageButton
            android:id="@+id/beauty_beauty_salon"
            android:contentDescription="@string/lab_image_screen_partner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/beauty_make_up"
            android:background="@drawable/parceiros_beleza_0012_salao_beleza"
            android:layout_margin="8sp"
            android:scaleX="0.52"/>
    </RelativeLayout>
</ScrollView>